# canandrepo-public

./: .gitignore  CODE_GUIDELINES.md  README.md  rust-toolchain.toml
.github/workflows/: build-reduxfifo.yml
ReduxLib/: .gitignore  CHANGELOG.md  ExampleVendorJson.json  LICENSE.txt  README.md  ReduxLib_2026.json  build.gradle  config.gradle  mkvdepjson.py  publish.gradle  version.txt
ReduxLib/canlink-standalone/: .gitignore
ReduxLib/canlink-standalone/src/main/cpp/: Robot.cpp
ReduxLib/docs/: hljs.gh.css  hljs_bootstrap.js
ReduxLib/docs/javadoc-resources/: highlight.min.js
ReduxLib/src/main/java/com/reduxrobotics/canand/: CanandAddress.java  CanandDevice.java  CanandDeviceDetails.java  CanandEventLoop.java  CanandFirmwareVersion.java  CanandMessage.java  CanandSettings.java  CanandSettingsManager.java  CanandUtils.java  CooldownWarning.java  DigitalStateSender.java  MessageBus.java  MessageLogger.java  ReduxJNI.java  Repeater.java  TransmitDeferrer.java  package-info.java
ReduxLib/src/main/java/com/reduxrobotics/frames/: BooleanFrame.java  ByteArrayFrame.java  DoubleFrame.java  Frame.java  FrameData.java  LongFrame.java  ShortArrayFrame.java  package-info.java
ReduxLib/src/main/native/cpp/canand/: CanandAddress.cpp  CanandDevice.cpp  CanandEventLoop.cpp  MessageBus.cpp
ReduxLib/src/main/native/cpp/sensors/canandcolor/: Canandcolor.cpp  CanandcolorSettings.cpp  DataSource.cpp  DigoutChain.cpp  DigoutSlot.cpp  DigoutSlotBuilder.cpp
ReduxLib/src/main/native/include/redux/: Namespaces.h
ReduxLib/tools/: javadoc_to_doxygen.py  javasig_to_cppsig.py
ReduxLib/vdeptools/: .gitignore  README.md  check_copyright.py  check_vdep.sh  doxygen.py  javadoc.py
ReduxLib/vdeptools/Snippets-cpp/: build.gradle
ReduxLib/vdeptools/Snippets-java/: build.gradle
canandmessage/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  generate_openapi.py  pyproject.toml  regenerate_everything.sh  requirements.txt
canandmessage/.cargo/: config.toml
canandmessage/canandmessage_alchemist_generation/: Cargo.toml
canandmessage/canandmessage_alchemist_generation/src/: lib.rs  ui.rs
canandmessage/canandmessage_defn_macro/: Cargo.toml
canandmessage/canandmessage_defn_macro/src/: alchemist_generation.rs  bitset_generation.rs  device_generation.rs  enum_generation.rs  lib.rs  message_generation.rs  setting_generation.rs  simulation_generation.rs  struct_generation.rs  utils.rs
canandmessage/canandmessage_parser/: Cargo.toml
canandmessage/canandmessage_parser/src/: lib.rs  model_impl.rs  toml_defs.rs  utils.rs
canandmessage/canandmessage_translingual/: Cargo.toml  __main__.py  cpp.py  java.py  openapi.py  python.py  rst.py  spec_template.rst.j2
canandmessage/canandmessage_translingual/canandmessage_parser/: __init__.py  __main__.py  model_impl.py  serde.py  toml_defs.py  utils.py
canandmessage/canandmessage_translingual/src/: java.rs  main.rs
canandmessage/dbc/: canandcolor.dbc  cananddevice.dbc  canandgyro.dbc  canandmag.dbc  reduxbroadcast.dbc  roborio.dbc  virtualdevice.dbc
canandmessage/dbcgen/: Cargo.toml
canandmessage/dbcgen/src/: main.rs
canandmessage/messages/: broadcast.toml  canandcolor.toml  cananddevice.toml  canandgyro.toml  canandmag.toml  tomldef.md  virtual_device.toml
canandmessage/messages/rst/: canandcolor.rst  cananddevice.rst  canandgyro.rst  canandmag.rst
canandmessage/pycanandmessage/: device.py  model.py  utils.py
canandmessage/pycanandmessage/canandcolor/: __init__.py  message.py  setting.py  types.py
canandmessage/pycanandmessage/cananddevice/: __init__.py  message.py  types.py
canandmessage/pycanandmessage/canandgyro/: __init__.py  message.py  setting.py  types.py
canandmessage/pycanandmessage/canandmag/: __init__.py  message.py  setting.py  types.py
canandmessage/pycanandmessage/reduxbroadcast/: __init__.py  message.py  setting.py  types.py
canandmessage/pycanandmessage/virtualdevice/: __init__.py  message.py  setting.py
canandmessage/src/: generic.rs  lib.rs  traits.rs
canandmessage/src/generic/: buf_msg.rs  enumerate.rs  report_setting.rs  set_setting.rs  setting_command.rs
crates/: Cargo.toml
crates/frc-can-id/: Cargo.toml  README.md
crates/frc-can-id/src/: lib.rs
crates/rdxcanlink-protocol/: Cargo.toml
crates/rdxcanlink-protocol/src/: lib.rs
crates/rdxcrc/: Cargo.toml
crates/rdxcrc/src/: lib.rs
crates/rdxota-client/: Cargo.toml
crates/rdxota-client/src/: lib.rs  v1.rs  v2.rs
crates/rdxota-protocol/: Cargo.toml
crates/rdxota-protocol/src/: lib.rs
crates/rdxota-protocol/src/otav1/: mod.rs
crates/rdxota-protocol/src/otav2/: index.rs  mod.rs
crates/rdxusb-protocol/: Cargo.toml
crates/rdxusb-protocol/src/: lib.rs
crates/serial-numer/: Cargo.toml
crates/serial-numer/src/: lib.rs
crates/serial-numer/tests/: serial_numer.rs
crates/socketcan/: Cargo.toml  README.md
crates/socketcan/examples/: async_std_print_frames.rs
crates/socketcan/src/: tokio.rs
crates/socketcan/src/nl/: mod.rs
reduxfifo/: .gitignore  Cargo.toml  README.md  build.rs  reduxfifo.md
reduxfifo/.cargo/: config.toml
reduxfifo/canandmiddleware/: Cargo.toml  README.md
reduxfifo/canandmiddleware/src/: backend.rs  lib.rs  log.rs  ota.rs  rest_server.rs  websocket.rs
reduxfifo/canandmiddleware/src/bus/: device.rs  mod.rs
reduxfifo/canandmiddleware/src/html/: configurator.html
reduxfifo/fifocore/: Cargo.toml
reduxfifo/fifocore/src/: backends.rs  data.rs  error.rs  fifocore.rs  lib.rs  logger.rs  timebase.rs
reduxfifo/fifocore/src/backends/: halcan.rs  rdxusb.rs  slcan.rs  socketcan.rs  usb.rs  websocket.rs  websocket_legacy.rs
reduxfifo/include/: ReduxCore.h  ReduxFIFO.h
reduxfifo/reduxfifo-standalone/: Cargo.toml
reduxfifo/reduxfifo-standalone/src/: main.rs
reduxfifo/reduxfifo-util/: Cargo.toml
reduxfifo/reduxfifo-util/src/: main.rs
reduxfifo/src/: ffi.rs  jni.rs  lib.rs  log.rs
reduxfifo/src/legacy/: jni.rs  mod.rs  reduxcore.rs
reduxfifo/src/subsystems/: mod.rs  repeater.rs
reduxfifo/xtask/: Cargo.toml
reduxfifo/xtask/src/: main.rs  maven_utils.rs
tools/: filter_rust_toolchain.py
(+95 files in other folders)
