[package]
name = "canandmessage_alchemist_generation"
version.workspace = true
publish.workspace = true
edition = "2021"
license = "LicenseRef-Redux-Proprietary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
canandmessage_parser = { path = "../canandmessage_parser" }

[dependencies.darling]
version = "0.20"
default-features = false

[dependencies.syn]
version = "2.0"
default-features = false
features = ["parsing","proc-macro","derive","extra-traits","full"]

[dependencies.quote]
version = "1.0"
default-features = false

[dependencies.proc-macro2]
version = "1.0"
default-features = false