[package]
name = "canandmessage_defn_macro"
description = "Proc macros that generate canandmessage"
edition = "2021"
authors = ["guineawheek <guineawheek@gmail.com>"]

#version = "4.2.0"
version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
canandmessage_parser = {path = "../canandmessage_parser" }
serde-big-array = "0.5.1"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
optional = true

[dependencies.darling]
version = "0.20"
default-features = false

[dependencies.proc-macro2]
version = "1.0"
default-features = false


[dependencies.quote]
version = "1.0"
default-features = false

[dependencies.paste]
version = "1.0"
default-features = false
[dependencies.syn]
version = "2.0"
default-features = false
features = ["parsing","proc-macro","derive","extra-traits","full"]