[package]
name = "frc-can-id"
version = "0.1.0"
description = "FRC CAN ID definition helper crate"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true


[dependencies]
num_enum = { version = "0.7.4", default-features = false }
