[package]
name = "rdxota-client"
description = "Async client state machine for the RdxOTA firmware upload protocol"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log = "0.4.22"
rdxota-protocol = { path = "../rdxota-protocol" }
rdxcrc = { path = "../rdxcrc" }
