[package]
name = "rdxota-protocol"
version = "0.1.0"
description = "Wire transport protocol definitions for RdxOTA"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
