[package]
name = "serial-numer"
version = "0.1.0"
description = "Redux serial numbering helper crate"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true


[features]
defmt = ["dep:defmt"]
serde = ["dep:serde"]

[dependencies]
num_enum = { version = "0.7.5", default-features = false }
rdxcrc = { path = "../rdxcrc" }
defmt = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
rand_chacha = "0.3.1"
