[package]
name = "canandmiddleware"
description = "ReduxFIFO web server"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "canandmiddleware"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["std", "backtrace"] }
env_logger = "0.11.8"
fifocore = { path = "../fifocore", default-features = false, features = ["canandmessage"] }
tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
futures = "0.3.31"
parking_lot = { version = "0.12.4", features = [] }
rustc-hash = "2.1.1"
const_format = "0.2.34"
log = "0.4.27"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.89"
canandmessage = { path = "../../canandmessage" }
serial-numer = { path = "../../crates/serial-numer", features = ["serde"] }
frc-can-id = { path = "../../crates/frc-can-id" }
rdxota-client = { path = "../../crates/rdxota-client" }
rdxota-protocol = { path = "../../crates/rdxota-protocol" }
rdxcanlink-protocol = { path = "../../crates/rdxcanlink-protocol" }
num-traits = "0.2.19"
