[package]
name = "reduxfifo-standalone"
description = "ReduxFIFO standalone test application"
authors.workspace = true
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
anyhow = { version = "1.0.98", features = ["std", "backtrace"] }
env_logger = "0.11.8"
fifocore = { path = "../fifocore", default-features = false }
tokio = { version = "1.46.1", features = ["full"] }
canandmiddleware = { path = "../canandmiddleware", default-features = false }
log = "0.4.28"
