[package]
name = "xtask"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
cargo_toml = "0.22.0"
chrono = "0.4.39"
clap = { version = "4.5.40", features = ["derive"] }
homedir = "0.3.4"
md5 = "0.8.0"
semver = "1.0.24"
sha1 = "0.10.6"
sha2 = "0.10.8"
walkdir = "2.5.0"
which = "8.0.0"
zip = { version = "5.1.1", features = ["deflate"], default-features = false }
